# github_stats

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
pull_requests/: app.py  stats.py
tests/: test_github_pullrequest.py
